--- a/src/components/Word/word.scss
+++ b/src/components/Word/word.scss
@@ -2,15 +2,15 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  margin: 1em;
+  margin: 0.5em;
   &__letter {
-    width: 1.5em;
-    height: 1.5em;
-    line-height: 1.5em;
-    font-size: 1.5rem;
+    width: 1.2em;
+    height: 1.2em;
+    line-height: 1em;
+    font-size: 1.2rem;
     border: solid 1px;
     background: linear-gradient(to top, darkgray, 1%, rgb(253,235,185));
     color: black;
-    border-radius: 0.3em;
+    border-radius: 0.25em;
   }
 }
